Restructured code, fixed css layout issues

--- a/src/component/box.css
+++ b/src/component/box.css
@@ -1,9 +1,11 @@
 .wrapper {
     height: 300px;;
-    width: 40%;
+    width: 60%;
 
     margin: auto;
     padding: 70px 0;
+    display: flex;
+    justify-content: center;
 }
 
 .box{
@@ -12,5 +14,11 @@
 
 .boxy-button{
     height: 50px;
-    width: 150px;
+    width: 250px;
+    border: none;
+    padding: 15px 32px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #e7e7e7;
 }
