--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
+  padding: 20%;
   font-family: sans-serif;
   height: 100%;
   background-color: black;
